--- a/Source/TreasureGuide.Web/src/views/index.html
+++ b/Source/TreasureGuide.Web/src/views/index.html
@@ -60,6 +60,11 @@
     </div>
     <div class="jumbo news">
         <h4>Updates</h4>
+        <h5>01/17/18</h5>
+        <ul>
+            <li>Updated Alert, Home Page, and Pagination UI.</li>
+        </ul>
+        <hr />
         <h5>01/16/18</h5>
         <ul>
             <li>Added support for sockets on teams.</li>
