--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -14,7 +14,7 @@
             <search-pager search-model.bind="searchModel"></search-pager>
         </div>
         <div class="row team-collection" if.bind="teams.length > 0">
-            <div class=" col m6" repeat.for="team of teams">
+            <div class=" col d6" repeat.for="team of teams">
                 <team-box team.bind="team"></team-box>
             </div>
         </div>
