--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -53,7 +53,7 @@
             <div class="form-group">
                 <label asp-for="Privacy">
                     <input asp-for="Privacy" type="checkbox" />
-                    <span class="-label-body">I agree to the <a href="/#/tos" target="_blank">Privacy Policy</a></span>
+                    <span class="-label-body">I agree to the <a href="/#/privacy" target="_blank">Privacy Policy</a></span>
                 </label>
                 <span asp-validation-for="Privacy"></span>
             </div>
