--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -54,7 +54,7 @@
         </div>
         <hr />
         <div>
-            <button auth-req="Contributor" class="button _primary _floatRight" click.delegate="submitVideo()">
+            <button type="button" auth-req="Contributor" class="button _primary _floatRight" click.delegate="submitVideo()">
                 <i class="fa fa-fw fa-youtube"></i>
                 Submit Video
             </button>
