--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -27,7 +27,7 @@
                     <team-display team.two-way="teamUnits" editable="true"></team-display>
                     <ship-display ship-id.two-way="shipId" editable="true"></ship-display>
                     <br />
-                    <button class="_xsmall _active" click.delegate="openImport()">
+                    <button type="button" class="_xsmall _active" click.delegate="openImport()">
                         <i class="fa fa-fw fa-cloud-download"></i>
                         Import from OPTC-DB
                     </button>
