Adding tags for robots.

--- a/Source/TreasureGuide.Web/Views/Account/_Layout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/_Layout.cshtml
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Login | Nakama Network</title>
     @{ Html.RenderPartial("_HeaderPartial"); }
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
