--- a/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
@@ -1,4 +1,8 @@
 ﻿<!-- Icons -->
+<meta charset="utf-8">
+<meta property="og:image" content="/content/icons/apple-icon.png" />
+<meta name="description" content="An open-source team building and sharing website for One Piece: Treasure Cruise.">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <link rel="apple-touch-icon" sizes="57x57" href="~/content/icons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="~/content/icons/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="~/content/icons/apple-icon-72x72.png">
