--- a/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿<!-- Icons -->
 <meta charset="utf-8">
-<meta property="og:image" content="/content/icons/apple-icon.png" />
+<meta property="og:image" content="https://www.nakama.network/content/icons/apple-icon.png" />
+<meta property="og:site_name" content="Nakama Network" />
+<meta property="og:description" content="An open-source team building and sharing website for One Piece: Treasure Cruise.">
 <meta name="description" content="An open-source team building and sharing website for One Piece: Treasure Cruise.">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <link rel="apple-touch-icon" sizes="57x57" href="~/content/icons/apple-icon-57x57.png">
