--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -28,6 +28,6 @@
             </style>
         </div>
     </div>
-    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+    <script src="~/scripts/vendor-bundle-b52d62e3ac.js" data-main="aurelia-bootstrapper"></script>
 </body>
 </html>
