--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -25,7 +25,7 @@
             <stage-display stage-id.bind="stageId"></stage-display>
         </div>
         <div class="row _alignCenter">
-            <team-display team.bind="teamUnits"></team-display>
+            <team-display team.bind="team"></team-display>
             <ship-display ship-id.bind="shipId"></ship-display>
             <br />
             <a href.bind="calcLink" target="_blank" href="#" class="button _small _active">
