--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -24,7 +24,7 @@
             <fieldset>
                 <legend>Units</legend>
                 <div class="form-group _alignCenter">
-                    <team-display team.two-way="teamUnits" editable="true"></team-display>
+                    <team-display team.two-way="team" editable="true"></team-display>
                     <ship-display ship-id.two-way="shipId" editable="true"></ship-display>
                     <br />
                     <button type="button" class="_xsmall _active" click.delegate="openImport()">
