--- a/Source/TreasureGuide.Web/src/views/index.html
+++ b/Source/TreasureGuide.Web/src/views/index.html
@@ -8,17 +8,21 @@
             <div class="col m6">
                 <h4>Trending Teams</h4>
                 <loading-area if.bind="trendLoading"></loading-area>
-                <div if.bind="!trendLoading">
+                <div if.bind="!trendLoading" class="team-collection _alignLeft">
                     <h6 if.bind="trendingTeams.length === 0">Nothing trending at the moment.</h6>
-                    <team-box repeat.for="team of trendingTeams" team.bind="team"></team-box>
+                    <div class="col m12" repeat.for="team of trendingTeams">
+                        <team-box team.bind="team"></team-box>
+                    </div>
                 </div>
             </div>
             <div class="col m6">
                 <h4>New Teams</h4>
                 <loading-area if.bind="newLoading"></loading-area>
-                <div if.bind="!newLoading">
+                <div if.bind="!newLoading" class="team-collection _alignLeft">
                     <h6 if.bind="newTeams.length === 0">Nothing new at the moment.</h6>
-                    <team-box repeat.for="team of newTeams" team.bind="team"></team-box>
+                    <div class="col m12" repeat.for="team of trendingTeams">
+                        <team-box team.bind="team"></team-box>
+                    </div>
                 </div>
             </div>
         </div>
