--- a/Source/TreasureGuide.Web/src/views/account/edit.html
+++ b/Source/TreasureGuide.Web/src/views/account/edit.html
@@ -28,7 +28,9 @@
             <div class="row">
                 <fieldset>
                     <legend>Avatar</legend>
-                    <unit-display unit-id.two-way="unitId" editable="true"></unit-display>
+                    <unit-display model.two-way="unitId"
+                                  editable="true">
+                    </unit-display>
                 </fieldset>
             </div>
             <div class="row">
