Fixing up Unit Id bindables.

--- a/Source/TreasureGuide.Web/src/views/account/edit.html
+++ b/Source/TreasureGuide.Web/src/views/account/edit.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <fieldset>
                     <legend>Avatar</legend>
-                    <unit-display model.two-way="unitId"
+                    <unit-display unit-id.two-way="unitId"
                                   editable="true">
                     </unit-display>
                 </fieldset>
