--- a/Source/TreasureGuide.Web/src/views/account/index.html
+++ b/Source/TreasureGuide.Web/src/views/account/index.html
@@ -7,7 +7,7 @@
             Edit Profile
         </a>
         <div class="_floatRight" if.bind="unitId">
-            <unit-display model.bind="unitId">
+            <unit-display unit-id.bind="unitId">
             </unit-display>
         </div>
         <div if.bind="friendId">
