--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -114,6 +114,64 @@ unit-display {
         width: 100%;
         height: 100%;
     }
+
+    .generic-container {
+        overflow: hidden;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        white-space: normal;
+
+        > div {
+            position: absolute;
+            width: 100%;
+        }
+
+        img {
+            width: 20%;
+            height: 20%;
+        }
+
+        .generic-types {
+            vertical-align: top;
+            text-align: left;
+            top: 0;
+            left: 0;
+
+            img {
+                padding: 1px;
+            }
+        }
+
+        .generic-roles {
+            vertical-align: middle;
+            text-align: center;
+            top: 50%;
+            transform: translateY(-50%);
+            -webkit-transform: translateY(-50%);
+
+            img {
+                width: 40%;
+                height: 40%;
+            }
+        }
+
+        .generic-classes {
+            vertical-align: bottom;
+            text-align: right;
+            bottom: 0;
+            right: 0;
+            transform: scaleY(-1);
+            -webkit-transform: scaleY(-1);
+
+            img {
+                transform: scaleY(-1);
+                -webkit-transform: scaleY(-1);
+            }
+        }
+    }
 }
 
 .team-collection {
