--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -56,7 +56,7 @@
                 </div>
             </fieldset>
         </div>
-        <div class="row" if.bind="id">
+        <div class="row">
             <fieldset>
                 <legend>Options</legend>
                 <div class="col m6">
@@ -68,7 +68,7 @@
                     </label>
                     <em>(Saves team to server without allowing others to see it.)</em>
                 </div>
-                <div class="col m6">
+                <div class="col m6" if.bind="id">
                     <label for="deleteInput">
                         <input type="checkbox" id="deleteInput" checked.bind="deleted" />
                         <span class="-label-body">
