Adding team bookmarking.

--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -17,7 +17,7 @@
                 Edit Team
             </a>
             <div class="_floatRight">
-                <score-display team-id.bind="id" score.bind="score" my-vote.two-way="myVote" votable="true"></score-display>
+                <score-display team-id.bind="id" score.bind="score" my-vote.two-way="myVote" my-bookmark.two-way="myBookmark" votable="true"></score-display>
             </div>
         </div>
         <div class="row" if.bind="stageId">
