--- a/Source/TreasureGuide.Web/Views/Shared/_CssPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_CssPartial.cshtml
@@ -1,5 +1,6 @@
-﻿<!-- Style Sheets-->
-<link rel="stylesheet" href="~/css/site.css">
+﻿@using TreasureGuide.Web.Helpers
+<!-- Style Sheets-->
+<link rel="stylesheet" href="~/css/site.css?@CacheBustingService.Appended">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
