Updating team box layout.

--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -9,6 +9,11 @@ body {
     overflow-y: scroll;
 }
 
+.container {
+    overflow-wrap: break-word;
+    text-wrap: normal;
+}
+
 .scrollbar-measure {
     width: 100px;
     height: 100px;
