--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -174,21 +174,18 @@ unit-display {
     }
 }
 
-.team-collection {
-    .col {
-        line-height: 0;
-    }
-}
-
 team-inline {
     display: block;
     width: 100%;
     white-space: nowrap;
+    text-align: center;
 
     unit-display {
         display: inline-block;
         width: 15%;
         margin: 0.5%;
+        max-width: $medium-unit-size;
+        max-height: $medium-unit-size;
 
         div {
             width: 100%;
@@ -199,8 +196,6 @@ team-inline {
                 pointer-events: none;
                 width: 100% !important;
                 height: 100% !important;
-                max-width: $medium-unit-size;
-                max-height: $medium-unit-size;
                 position: absolute;
                 left: 0;
                 right: 0;
@@ -291,48 +286,69 @@ team-display {
 }
 
 team-box {
+    position: relative;
+
+    .backdrop {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: $background-color;
+        border: 1px solid $grey-color;
+        border-radius: 20px;
+        margin: 10px;
+        pointer-events: none;
+        z-index: -9999;
+
+        &.deleted {
+            background-color: lighten($danger-color, 50) !important;
+            opacity: 0.4;
+        }
+
+        &.reported {
+            background-color: lighten($warning-color, 50);
+        }
+
+        &.draft {
+            background-color: $grey-color;
+            border: 2px dashed darken($grey-color, 40);
+        }
+    }
+
+    &, & a {
+        display: block;
+        width: 100%;
+    }
+
     a {
+        margin-left: 10px;
         text-decoration: none;
-        color: initial;
     }
 
-    fieldset {
-        padding-bottom: 0;
-        min-width: 100% !important;
-        max-width: 100% !important;
-    }
-
-    fieldset:hover {
-        opacity: 0.6;
-    }
-
-    h1 {
-        font-size: 1.4em;
-        margin-top: -2.2em;
+    .col {
+        margin: 0;
+        padding: 0;
     }
 
     .row {
-        @extend ._alignCenter;
-        line-height: 1.6em;
-        margin: 0;
+        margin: 0 10px;
+        padding: 0;
     }
 
-    .team {
-        padding-top: 4px;
-    }
-
-    stage-display, ship-display, .submission {
-        display: block;
+    h2 {
+        @extend .truncate;
+        width: fit-content;
         max-width: 100%;
-        min-width: 100%;
-    }
-
-    stage-display {
-        @extend ._floatLeft;
-        text-align: left;
+        font-size: 1.2em;
+        font-weight: bolder;
+        background-color: $background-color;
+        margin-bottom: 0.4em;
     }
 
     ship-display, stage-display {
+        display: block;
+
         span {
             @extend .truncate;
             display: block;
@@ -340,8 +356,6 @@ team-box {
     }
 
     .submission {
-        @extend ._floatRight;
-        text-align: right;
         font-size: smaller;
 
         user-display {
@@ -349,18 +363,13 @@ team-box {
         }
     }
 
-    score-display {
-        @extend ._floatRight;
-        margin-top: -10px;
-        margin-right: -5px;
-    }
-
     .flags {
         @extend ._floatLeft;
         @extend ._infoLight;
-        margin-left: -25px;
-        padding: 2px;
+        padding: 2px 0;
         position: absolute;
+        top: 1.5em;
+        left: -3px;
         font-size: medium;
         border-radius: 6px;
 
@@ -373,20 +382,6 @@ team-box {
         .fa-credit-card, .fa-credit-card-alt {
             font-size: smaller;
         }
-    }
-
-    .deleted {
-        background-color: lighten($danger-color, 50) !important;
-        opacity: 0.4;
-    }
-
-    .reported {
-        background-color: lighten($warning-color, 50);
-    }
-
-    .draft {
-        background-color: $grey-color;
-        border: 2px dashed darken($grey-color, 40);
     }
 }
 
