--- a/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_HeaderPartial.cshtml
@@ -1,9 +1,10 @@
 ﻿<!-- Icons -->
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta property="og:image" content="https://www.nakama.network/content/icons/apple-icon.png" />
 <meta property="og:site_name" content="Nakama Network" />
-<meta property="og:description" content="An open-source team building and sharing website for One Piece: Treasure Cruise.">
-<meta name="description" content="An open-source team building and sharing website for One Piece: Treasure Cruise.">
+<meta property="og:description" content="The premiere team-building and sharing website for One Piece: Treasure Cruise.">
+<meta name="description" content="The premiere team-building and sharing website for One Piece: Treasure Cruise.">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <link rel="apple-touch-icon" sizes="57x57" href="~/content/icons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="~/content/icons/apple-icon-60x60.png">
