--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -179,6 +179,18 @@ iframe {
         margin: auto;
         height: 6em;
     }
+
+    h2, h3 {
+        letter-spacing: initial;
+    }
+
+    h2 {
+        font-size: 1.5em;
+    }
+
+    h3 {
+        font-size: initial;
+    }
 }
 
 .news {
