--- a/Source/TreasureGuide.Web/src/views/boring/intro.html
+++ b/Source/TreasureGuide.Web/src/views/boring/intro.html
@@ -3,16 +3,17 @@
         <div class="row">
             <h1>Welcome to Nakama Network!</h1>
             <hr />
+            <h2>The Premiere Team-Building and Sharing Website for One Piece: Treasure Cruise!</h2>
         </div>
         <div class="row">
             <div class="col m6">
                 <div class="card _white">
                     <img src="/content/home/search.png" title="Search Teams" />
                     <div class="-content">
-                        <p>
+                        <h3>
                             Browse, search, submit, and rate teams<br />
                             for <a href="http://onepiece-treasurecruise.com/en/" target="_blank">One Piece Treasure Cruise.</a>
-                        </p>
+                        </h3>
                     </div>
                 </div>
             </div>
@@ -20,10 +21,10 @@
                 <div class="card _white">
                     <img src="/content/home/calculator.png" title="Damage Calculator Import/Export" />
                     <div class="-content">
-                        <p>
+                        <h3>
                             Import teams directly from<br />
                             <a href="http://optc-db.github.io/damage/#/" target="_blank">OPTC-db's Damage Calculator.</a>
-                        </p>
+                        </h3>
                     </div>
                 </div>
             </div>
@@ -31,10 +32,10 @@
                 <div class="card _white">
                     <img src="/content/home/videos.png" title="Submit YouTube Videos" />
                     <div class="-content">
-                        <p>
+                        <h3>
                             Share your <a href="https://youtube.com" target="_blank">YouTube</a> videos<br />
                             to show off your teams in action!
-                        </p>
+                        </h3>
                     </div>
                 </div>
             </div>
@@ -42,10 +43,10 @@
                 <div class="card _white">
                     <img src="/content/home/register.png" title="Social Media OAuth Login" />
                     <div class="-content">
-                        <p>
+                        <h3>
                             <a href="/Account/Login">Register</a> quickly with a social media account.<br />
                             No passwords required!
-                        </p>
+                        </h3>
                     </div>
                 </div>
             </div>
