--- a/Source/TreasureGuide.Web/src/views/admin/index.html
+++ b/Source/TreasureGuide.Web/src/views/admin/index.html
@@ -42,7 +42,7 @@
                     <tbody>
                         <tr repeat.for="profile of profiles">
                             <td>
-                                <a route-href="route: account; params.bind: {id: profile.id}">
+                                <a route-href="route: account; params.bind: { id: profile.userName }">
                                     <user-display name.bind="profile.userName" unit-id.bind="profile.unitId"></user-display>
                                 </a>
                             </td>
